[package]
name = "rust-ecom-backend-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
tower-http = { version = "0.3", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }